tests/ui/consts/control-flow/drop-fail.precise.stderr
error[E0493]: destructor of `Option<Vec<i32>>` cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:8:9
   |
LL |     let x = Some(Vec::new());
   |         ^ the destructor for this type cannot be evaluated in constants

error[E0493]: destructor of `Option<Vec<i32>>` cannot be evaluated at compile-time
  --> $DIR/drop-fail.rs:39:9
   |
LL |     let mut tmp = None;
   |         ^^^^^^^ the destructor for this type cannot be evaluated in constants

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0493`.
